Fixes clear history button in dark mode

--- a/www/src/scss/themes/helpers/_dark-base.scss
+++ b/www/src/scss/themes/helpers/_dark-base.scss
@@ -53,7 +53,8 @@
 
   .navigator-header,
   .more-tabs .nav-header-tab,
-  .settings-nav {
+  .settings-nav,
+  .clear-history {
     background-color: $bg-main;
     color: $text-base;
   }
